--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SexyHub Premium</title>
-  <link rel="stylesheet" href="/style principal.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
