--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero-content">
       <div class="hero-text">
         <h1>Bem-vindo à SexyHub</h1>
-        <p>Conectamos você com as modelos mais exclusivas da internet. Tudo direto e com atendimento personalizado.</p>
+        <p>Conectamos você com modelos reais e exclusivas, com atendimento direto via WhatsApp. Conteúdos personalizados com total privacidade.</p>
         <a href="#como-funciona" class="btn-cta">Como Funciona</a>
       </div>
       <div class="hero-img">
@@ -24,46 +24,46 @@
   <!-- Seção Como Funciona -->
   <section class="como-funciona" id="como-funciona">
     <h2>Como Funciona</h2>
-    <p>Você escolhe a modelo, visualiza os conteúdos em destaque e fala direto com a nossa atendente via WhatsApp. É simples, seguro e rápido.</p>
+    <p>Nosso processo é simples, seguro e direto. Após escolher uma modelo, você será atendido via WhatsApp por nossa equipe e terá acesso aos conteúdos disponíveis.</p>
     <ul>
-      <li>👩‍💻 Atendimento dedicado via WhatsApp</li>
-      <li>📦 Packs exclusivos sob medida</li>
-      <li>🔒 Privacidade garantida</li>
+      <li>📱 Atendimento 100% humano via WhatsApp</li>
+      <li>🔞 Packs personalizados e exclusivos</li>
+      <li>🔐 Garantia de privacidade</li>
     </ul>
   </section>
 
-  <!-- Modelos em Destaque -->
+  <!-- Seção Modelos em Destaque -->
   <section class="modelos-destaque">
     <h2>Modelos em Destaque</h2>
     <div class="modelo-cards">
       <div class="modelo">
-        <img src="https://images.unsplash.com/photo-1593113598332-58f69e2a3a1f?auto=format&fit=crop&w=800&q=80" alt="Modelo 1">
+        <img src="https://images.unsplash.com/photo-1593113598332-58f69e2a3a1f?auto=format&fit=crop&w=800&q=80" alt="Modelo Gabriela">
         <h3>Gabriela</h3>
         <p>🔥 Conteúdos ousados e atendimento rápido.</p>
       </div>
       <div class="modelo">
-        <img src="https://images.unsplash.com/photo-1601039641089-87370f6ae886?auto=format&fit=crop&w=800&q=80" alt="Modelo 2">
+        <img src="https://images.unsplash.com/photo-1601039641089-87370f6ae886?auto=format&fit=crop&w=800&q=80" alt="Modelo Camila">
         <h3>Camila</h3>
         <p>👠 Fetiches, fantasias e muito mais no privado.</p>
       </div>
       <div class="modelo">
-        <img src="https://images.unsplash.com/photo-1611162617213-3f39ecf29b26?auto=format&fit=crop&w=800&q=80" alt="Modelo 3">
+        <img src="https://images.unsplash.com/photo-1611162617213-3f39ecf29b26?auto=format&fit=crop&w=800&q=80" alt="Modelo Lara">
         <h3>Lara</h3>
         <p>💋 Pack completo com vídeos e fotos exclusivas.</p>
       </div>
     </div>
   </section>
 
-  <!-- FAQ -->
+  <!-- Seção FAQ -->
   <section class="faq">
     <h2>Dúvidas Frequentes</h2>
     <div class="faq-item">
       <h4>Como faço para comprar?</h4>
-      <p>Você será direcionado para o WhatsApp onde nossa atendente irá te mostrar os conteúdos disponíveis e formas de pagamento.</p>
+      <p>Basta clicar no botão de atendimento e falar diretamente com nossa equipe via WhatsApp. Você verá as opções disponíveis e poderá escolher com segurança.</p>
     </div>
     <div class="faq-item">
       <h4>É seguro?</h4>
-      <p>Sim! Garantimos privacidade total e entrega dos conteúdos assim que o pagamento for confirmado.</p>
+      <p>Sim. Todo o processo é feito com total privacidade e sigilo. Você só paga após ver as opções e confirmar sua escolha.</p>
     </div>
   </section>
 
