--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <!-- Modelos em destaque -->
   <section id="modelo-destaque" class="modelo-destaque section-animate">
-    <h2>Modelos em Destaque da SexyHub</h2>
+    <h2>Modelos de Destaque da SexyHub</h2>
     <div class="modelo-carrossel">
       <div class="modelo-card">
         <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?auto=format&fit=crop&w=500&q=80" alt="Marina Joyce" />
